--- a/src/app/gs-viewer/toolwindow/groups.component.css
+++ b/src/app/gs-viewer/toolwindow/groups.component.css
@@ -67,7 +67,8 @@
     font-family:sans-serif;
 } 
 ::ng-deep .mat-accent .mat-slider-thumb-label {
-    background-color: #395d73;
+    background-color: white;
+    color:#395d73;
     font-family:sans-serif;
 }
 ::ng-deep .mat-accent .mat-slider-track-fill {
