--- a/src/app/gs-viewer/gs-viewer.component.scss
+++ b/src/app/gs-viewer/gs-viewer.component.scss
@@ -26,7 +26,7 @@ html, body {
   background-color: white;
 }
 #splittoolwindow{
-  overflow-y:scroll !important;
+  overflow:scroll !important;
 }
 
 
