--- a/src/app/gs-viewer/toolwindow/toolwindow.component.css
+++ b/src/app/gs-viewer/toolwindow/toolwindow.component.css
@@ -1,6 +1,6 @@
 #toolwindow{
   background-color:white;
-  overflow-x: scroll !important;
+  /*overflow-x: scroll !important;*/
   font-family:sans-serif;
   width: 100%;
 }
