--- a/src/app/gs-viewer/toolwindow/groups.component.css
+++ b/src/app/gs-viewer/toolwindow/groups.component.css
@@ -119,10 +119,23 @@
 /deep/.mat-ink-bar{
   background-color: #395d73 !important;
 }
-/*.mat-tab{
+.mat-tab{
   min-width: 30px !important;
 }
-*/
+
+.mat-expansion-panel-spacing {
+  margin-top:0px;
+  margin-bottom: 0px;
+}
+.mat-expansion-panel{
+  background-color: #F1F1F1 !important;
+  border-color: #395d73;
+  line-height: 14px;
+  font-weight: bold !important;
+  font-size: 12px !important;
+  overflow: hidden !important;
+}
+
 #groupname{
   margin-right: 0px;
 }
@@ -132,6 +145,7 @@
   margin-left: 0px;
   color:#395d73;
   border: 0;
+  height: 20px;
 }
 .mat-list-text{
   cursor :pointer;
