--- a/src/app/gs-viewer/toolwindow/toolwindow.component.html
+++ b/src/app/gs-viewer/toolwindow/toolwindow.component.html
@@ -23,15 +23,15 @@
     <div *ngIf="Visible === 'Points'">
       <table border="1" cellspacing="0" cellpadding="0" bordercolor="#d0d0d0">
         <tr>
-          <td align=center width="100px">Points ID</td>
-          <td width="180px" align=center>X</td>
-          <td width="180px" align=center>Y</td>
-          <td width="180px" align=center>Z</td>
-          <td  align=center width="180px" *ngFor="let name of point_name"><div style="width:180px;word-wrap:break-word;" >{{name}}</div></td>
+          <td align=center width="180px"><div style="width:180px;word-wrap:break-word;" >Points ID <!-- <input type="checkbox" id="id" class="checkbox" style="float:right" (click)="checkbox()"> --></div></td>
+          <td width="180px" align=center><div style="width:180px;word-wrap:break-word;" >X<input type="checkbox" style="float:right" id="X"  class="checkbox" (click)="checkbox()"></div></td>
+          <td width="180px" align=center><div style="width:180px;word-wrap:break-word;" >Y<input type="checkbox" style="float:right" id="Y" class="checkbox" (click)="checkbox()"></div></td>
+          <td width="180px" align=center><div style="width:180px;word-wrap:break-word;" >Z<input type="checkbox" style="float:right" id="Z" class="checkbox" (click)="checkbox()"></div></td>
+          <td  align=center width="180px" class="checkbox" *ngFor="let name of point_name;let idx=index"><div style="width:180px;word-wrap:break-word;" >{{name}}<input type="checkbox" id={{name}} style="float:right" (click)="checkbox()"></div></td>
       </table>
       <table border="1" cellspacing="0" cellpadding="0"  bordercolor="#d0d0d0" *ngFor="let datascale of attribute| paginate: { itemsPerPage: 50, currentPage: p1 }">
         <tr>
-          <td name="Number" align=center  width="100px"><div style="width:100px;word-wrap:break-word;" ><button width="100px" id="numberbutton" (click)=Onselect(datascale)>{{datascale.id}}</button></div></td>
+          <td name="Number" align=center  width="180px"><div style="width:180px;word-wrap:break-word;" ><button width="180px" id="numberbutton" (click)=Onselect(datascale)>{{datascale.id}}</button></div></td>
           <td width="180px" align=center><div style="width:180px;word-wrap:break-word;" >{{datascale.x}}</div></td>
           <td width="180px" align=center><div style="width:180px;word-wrap:break-word;" >{{datascale.y}}</div></td>
           <td width="180px" align=center><div style="width:180px;word-wrap:break-word;" >{{datascale.z}}</div></td>
@@ -42,15 +42,15 @@
     <div *ngIf="Visible === 'Vertices'">
       <table border="1" cellspacing="0" cellpadding="0" bordercolor="#d0d0d0" >
         <tr>
-          <td  align=center width="100px">Vertices Label</td>
-          <td  align=center width="60px">Points ID</td>
-          <td  align=center width="180px" *ngFor="let name of vertex_name"><div style="width:180px;word-wrap:break-word;" >{{name}}</div></td>
+          <td  align=center width="180px"><div style="width:180px;word-wrap:break-word;" >Vertices Label<!-- <input type="checkbox" style="float:right" (click)="changeselected()"> --></div></td>
+          <td  align=center width="180px"><div style="width:180px;word-wrap:break-word;" >Points ID<input type="checkbox" style="float:right" id="id" (click)="checkbox()"></div></td>
+          <td  align=center width="180px" *ngFor="let name of vertex_name"><div style="width:180px;word-wrap:break-word;" >{{name}}<input type="checkbox" id={{name}} style="float:right" (click)="checkbox()"></div></td>
         </tr>
       </table>
       <table border="1" cellspacing="0" cellpadding="0" bordercolor="#d0d0d0" *ngFor="let datascale of attribute| paginate: { itemsPerPage: 50, currentPage: p2 }">
         <tr>
-          <td name="Number" align=center  width="100px"><div style="width:100px;word-wrap:break-word;" ><button  id="numberbutton">{{datascale.vertixlabel}}</button></div></td>
-          <td  align=center  width="60px">{{datascale.pointid}}</td>
+          <td name="Number" align=center  width="180px"><div style="width:180px;word-wrap:break-word;" ><button  id="numberbutton">{{datascale.vertixlabel}}</button></div></td>
+          <td  align=center  width="180px"><div style="width:180px;word-wrap:break-word;" >{{datascale.pointid}}</div></td>
           <td  id="attrib" width="180px" align=center *ngFor="let name of vertex_name; let idx=index"><div style="width:180px;word-wrap:break-word;" >{{datascale[idx]}}</div></td> 
         </tr>
       </table>
@@ -58,13 +58,13 @@
     <div *ngIf="Visible === 'Edges'">
       <table border="1" cellspacing="0" cellpadding="0"  bordercolor="#d0d0d0" >
         <tr>
-          <td  align=center width="60px"><div style="width:100px;word-wrap:break-word;" >Edge ID</div></td>
-          <td  align=center width="180px" *ngFor="let name of edge_name"><div style="width:180px;word-wrap:break-word;" >{{name}}</div></td> 
+          <td  align=center width="180px"><div style="width:180px;word-wrap:break-word;" >Edge ID<input type="checkbox" style="float:right" (click)="checkbox()"></div></td>
+          <td  align=center width="180px" *ngFor="let name of edge_name"><div style="width:180px;word-wrap:break-word;" >{{name}}<input type="checkbox" style="float:right" (click)="checkbox()"></div></td> 
         </tr>
       </table>
       <table border="1" cellspacing="0" cellpadding="0"  bordercolor="#d0d0d0" *ngFor="let datascale of attribute| paginate: { itemsPerPage: 50, currentPage: p3 }" >
         <tr>
-          <td name="Number" align=center  width="60px"><div style="width:100px;word-wrap:break-word;" ><button  id="numberbutton">{{datascale.label}}</button></div></td>
+          <td name="Number" align=center  width="180px"><div style="width:180px;word-wrap:break-word;" ><button  id="numberbutton">{{datascale.label}}</button></div></td>
           <td  id="attrib" width="180px" align=center *ngFor="let name of edge_name; let idx=index"><div style="width:180px;word-wrap:break-word;" >{{datascale[idx]}}</div></td>
         </tr>
       </table>
@@ -72,13 +72,13 @@
     <div *ngIf="Visible === 'Wires'">
       <table border="1" cellspacing="0" cellpadding="0"  bordercolor="#d0d0d0" >
         <tr>
-          <td  align=center width="60px"><div style="width:100px;word-wrap:break-word;" >Wire ID</div></td>
-          <td  align=center width="180px" *ngFor="let name of wire_name"><div style="width:180px;word-wrap:break-word;" >{{name}}</div></td> 
+          <td  align=center width="180px"><div style="width:180px;word-wrap:break-word;" >Wire ID<input type="checkbox" style="float:right" (click)="checkbox()"></div></td>
+          <td  align=center width="180px" *ngFor="let name of wire_name"><div style="width:180px;word-wrap:break-word;" >{{name}}<input type="checkbox" style="float:right" (click)="checkbox()"></div></td> 
         </tr>
       </table>
       <table border="1" cellspacing="0" cellpadding="0"  bordercolor="#d0d0d0" *ngFor="let datascale of attribute| paginate: { itemsPerPage: 50, currentPage: p4 }" >
         <tr>
-          <td name="Number" align=center  width="60px"><div style="width:100px;word-wrap:break-word;" ><button  id="numberbutton">{{datascale.label}}</button></div></td>
+          <td name="Number" align=center  width="180px"><div style="width:180px;word-wrap:break-word;" ><button  id="numberbutton">{{datascale.label}}</button></div></td>
           <td  id="attrib" width="180px" align=center *ngFor="let name of wire_name; let idx=index"><div style="width:180px;word-wrap:break-word;" >{{datascale[idx]}}</div></td>
         </tr>
       </table>
@@ -86,13 +86,13 @@
     <div *ngIf="Visible === 'Faces'">
       <table border="1" cellspacing="0" cellpadding="0"  bordercolor="#d0d0d0" >
         <tr>
-          <td  align=center width="60px"><div style="width:100px;word-wrap:break-word;" >Face ID</div></td>
-          <td  align=center width="180px" *ngFor="let name of face_name"><div style="width:180px;word-wrap:break-word;" >{{name}}</div></td> 
+          <td  align=center width="180px"><div style="width:180px;word-wrap:break-word;" >Face ID<input type="checkbox" style="float:right" id="checkface" (click)="checkbox()"></div></td>
+          <td  align=center width="180px" *ngFor="let name of face_name"><div style="width:180px;word-wrap:break-word;" >{{name}}<input type="checkbox" style="float:right" id={{name}} (click)="checkbox()"></div></td> 
         </tr>
       </table>
       <table border="1" cellspacing="0" cellpadding="0"  bordercolor="#d0d0d0" *ngFor="let datascale of attribute| paginate: { itemsPerPage: 50, currentPage: p5 }" >
         <tr>
-          <td name="Number" align=center  width="60px"><div style="width:100px;word-wrap:break-word;" ><button  id="numberbutton">{{datascale.label}}</button></div></td>
+          <td name="Number" align=center  width="180px"><div style="width:180px;word-wrap:break-word;" ><button  id="numberbutton">{{datascale.label}}</button></div></td>
           <td  id="attrib" width="180px" align=center *ngFor="let name of face_name; let idx=index"><div style="width:180px;word-wrap:break-word;" >{{datascale[idx]}}</div></td>
         </tr>
       </table>
@@ -100,13 +100,13 @@
     <div *ngIf="Visible === 'Objs'">
       <table border="1" cellspacing="0" cellpadding="0"  bordercolor="#d0d0d0" class="table_ojbs" >
         <tr>
-          <td name="Number" align=center width="60px"><div style="width:100px;word-wrap:break-word;" >Object ID</div></td>
-          <td  align=center width="180px" *ngFor="let name of obj_name" ><div style="width:180px;word-wrap:break-word;" >{{name}}</div></td>
+          <td name="Number" align=center width="180px"><div style="width:180px;word-wrap:break-word;" >Object ID<input type="checkbox" style="float:right" (click)="checkbox()"></div></td>
+          <td  align=center width="180px" *ngFor="let name of obj_name" ><div style="width:180px;word-wrap:break-word;" >{{name}}<input type="checkbox" style="float:right" (click)="checkbox()"></div></td>
         </tr>
       </table>
       <table border="1" cellspacing="0" cellpadding="0"  bordercolor="#d0d0d0" *ngFor="let datascale of attribute| paginate: { itemsPerPage: 50, currentPage: p6 } " class="table_ojbs" >
         <tr>
-          <td name="Number" align=center  width="60px"><div style="width:100px;word-wrap:break-word;" ><button  id="numberbutton">{{datascale.label}}</button></div></td>
+          <td name="Number" align=center  width="180px"><div style="width:180px;word-wrap:break-word;" ><button  id="numberbutton">{{datascale.label}}</button></div></td>
           <td  id="attrib" width="180px" align=center *ngFor="let name of obj_name; let idx=index"><div style="width:180px;word-wrap:break-word;" >{{datascale[idx]}}</div></td>
         </tr>
       </table>
