--- a/src/app/gs-viewer/toolwindow/toolwindow.component.html
+++ b/src/app/gs-viewer/toolwindow/toolwindow.component.html
@@ -23,10 +23,10 @@
     <div *ngIf="Visible === 'Points'">
       <table border="1" cellspacing="0" cellpadding="0" bordercolor="#d0d0d0">
         <tr>
-          <td align=center width="180px"><div style="width:180px;word-wrap:break-word;" >Points ID <!-- <input type="checkbox" id="id" class="checkbox" style="float:right" (click)="checkbox()"> --></div></td>
-          <td width="180px" align=center><div style="width:180px;word-wrap:break-word;" >X<input type="checkbox" style="float:right" id="X"  class="checkbox" (click)="checkbox()"></div></td>
-          <td width="180px" align=center><div style="width:180px;word-wrap:break-word;" >Y<input type="checkbox" style="float:right" id="Y" class="checkbox" (click)="checkbox()"></div></td>
-          <td width="180px" align=center><div style="width:180px;word-wrap:break-word;" >Z<input type="checkbox" style="float:right" id="Z" class="checkbox" (click)="checkbox()"></div></td>
+          <td align=center width="180px"><div style="width:180px;word-wrap:break-word;" >Points ID <input type="checkbox" id="id" class="checkbox" style="float:right" [checked]="checkpointid" (click)="checkbox()"></div></td>
+          <td width="180px" align=center><div style="width:180px;word-wrap:break-word;" >X<input type="checkbox" style="float:right" id="X"  class="checkbox" [checked]="checkX" (click)="checkbox()"></div></td>
+          <td width="180px" align=center><div style="width:180px;word-wrap:break-word;" >Y<input type="checkbox" style="float:right" id="Y" class="checkbox" [checked]="checkY" (click)="checkbox()"></div></td>
+          <td width="180px" align=center><div style="width:180px;word-wrap:break-word;" >Z<input type="checkbox" style="float:right" id="Z" class="checkbox" [checked]="checkZ" (click)="checkbox()"></div></td>
           <td  align=center width="180px" class="checkbox" *ngFor="let name of point_name;let idx=index"><div style="width:180px;word-wrap:break-word;" >{{name}}<input type="checkbox" id={{name}} style="float:right" (click)="checkbox()"></div></td>
       </table>
       <table border="1" cellspacing="0" cellpadding="0"  bordercolor="#d0d0d0" *ngFor="let datascale of attribute| paginate: { itemsPerPage: 50, currentPage: p1 }">
@@ -58,8 +58,8 @@
     <div *ngIf="Visible === 'Edges'">
       <table border="1" cellspacing="0" cellpadding="0"  bordercolor="#d0d0d0" >
         <tr>
-          <td  align=center width="180px"><div style="width:180px;word-wrap:break-word;" >Edge ID<input type="checkbox" style="float:right" (click)="checkbox()"></div></td>
-          <td  align=center width="180px" *ngFor="let name of edge_name"><div style="width:180px;word-wrap:break-word;" >{{name}}<input type="checkbox" style="float:right" (click)="checkbox()"></div></td> 
+          <td  align=center width="180px"><div style="width:180px;word-wrap:break-word;" >Edge ID<input type="checkbox" style="float:right" id="edgeid" (click)="checkbox()"></div></td>
+          <td  align=center width="180px" *ngFor="let name of edge_name"><div style="width:180px;word-wrap:break-word;" >{{name}}<input type="checkbox" style="float:right" id={{name}} (click)="checkbox()"></div></td> 
         </tr>
       </table>
       <table border="1" cellspacing="0" cellpadding="0"  bordercolor="#d0d0d0" *ngFor="let datascale of attribute| paginate: { itemsPerPage: 50, currentPage: p3 }" >
@@ -73,7 +73,7 @@
       <table border="1" cellspacing="0" cellpadding="0"  bordercolor="#d0d0d0" >
         <tr>
           <td  align=center width="180px"><div style="width:180px;word-wrap:break-word;" >Wire ID<input type="checkbox" style="float:right" (click)="checkbox()"></div></td>
-          <td  align=center width="180px" *ngFor="let name of wire_name"><div style="width:180px;word-wrap:break-word;" >{{name}}<input type="checkbox" style="float:right" (click)="checkbox()"></div></td> 
+          <td  align=center width="180px" *ngFor="let name of wire_name"><div style="width:180px;word-wrap:break-word;" >{{name}}<input type="checkbox" style="float:right" id={{name}} (click)="checkbox()"></div></td> 
         </tr>
       </table>
       <table border="1" cellspacing="0" cellpadding="0"  bordercolor="#d0d0d0" *ngFor="let datascale of attribute| paginate: { itemsPerPage: 50, currentPage: p4 }" >
@@ -86,7 +86,7 @@
     <div *ngIf="Visible === 'Faces'">
       <table border="1" cellspacing="0" cellpadding="0"  bordercolor="#d0d0d0" >
         <tr>
-          <td  align=center width="180px"><div style="width:180px;word-wrap:break-word;" >Face ID<input type="checkbox" style="float:right" id="checkface" (click)="checkbox()"></div></td>
+          <td  align=center width="180px"><div style="width:180px;word-wrap:break-word;" >Face ID<input type="checkbox" style="float:right" id="checkface" [checked]="checkface" (click)="checkbox()"></div></td>
           <td  align=center width="180px" *ngFor="let name of face_name"><div style="width:180px;word-wrap:break-word;" >{{name}}<input type="checkbox" style="float:right" id={{name}} (click)="checkbox()"></div></td> 
         </tr>
       </table>
@@ -100,7 +100,7 @@
     <div *ngIf="Visible === 'Objs'">
       <table border="1" cellspacing="0" cellpadding="0"  bordercolor="#d0d0d0" class="table_ojbs" >
         <tr>
-          <td name="Number" align=center width="180px"><div style="width:180px;word-wrap:break-word;" >Object ID<input type="checkbox" style="float:right" (click)="checkbox()"></div></td>
+          <td name="Number" align=center width="180px"><div style="width:180px;word-wrap:break-word;" >Object ID<input type="checkbox" style="float:right" id="checkobj" [checked]="checkobj" (click)="checkbox()"></div></td>
           <td  align=center width="180px" *ngFor="let name of obj_name" ><div style="width:180px;word-wrap:break-word;" >{{name}}<input type="checkbox" style="float:right" (click)="checkbox()"></div></td>
         </tr>
       </table>
