--- a/src/app/gs-viewer/viewer/viewer.component.html
+++ b/src/app/gs-viewer/viewer/viewer.component.html
@@ -54,6 +54,9 @@
         </tr>
       </div>
 
+      <!-- <button id="imagery"  
+        [class.selected]="imVisible" (click)="leaflet()">I
+      </button> -->
       	
       	<!--setting-->
       	
