--- a/src/app/gs-viewer/viewer/viewer.component.css
+++ b/src/app/gs-viewer/viewer/viewer.component.css
@@ -54,6 +54,18 @@
   border:0;
 }*/
 
+/*#imagery{
+  width: 30px;
+  height: 25px;
+  font-size:14px;
+  right:0px; 
+  text-align:center;
+  position: absolute;
+  margin-top: 10px;
+  background-color:transparent;
+  border:0;
+}*/
+
 #zoomingfit{
   width: 30px;
   height: 25px;
@@ -162,6 +174,7 @@
   background-color:transparent;
   border:0;
 }
+
 
 
 .selected{
