--- a/src/app/gs-viewer/toolwindow/toolwindow.component.html
+++ b/src/app/gs-viewer/toolwindow/toolwindow.component.html
@@ -1,13 +1,13 @@
 <div id="toolwindow">
   <div style="position:relative;">
   <div id="toolbar">
-    <button id="point" [class.visible]="Visible === 'Points'" (click)="point(Visible)">P</button>
-    <button id="vertice" [class.visible]="Visible === 'Vertices'" (click)="vertice(Visible)">V</button>
-    <button id="edge" [class.visible]="Visible === 'Edges'" (click)="edge(Visible)">E</button>
-    <button id="wire" [class.visible]="Visible === 'Wires'" (click)="wire(Visible)">W</button>
-    <button id="face" [class.visible]="Visible === 'Faces'" (click)="face(Visible)">F</button>
-    <button id="object" [class.visible]="Visible === 'Objs'" (click)="object(Visible)">O</button>
-    <input id="selected" type="checkbox" (click)="changeselected()">
+    <button id="gsv-point" class="gsv-toolbar"  [class.visible]="Visible === 'Points'" (click)="point(Visible)">P</button>
+    <button id="gsv-vertice" class="gsv-toolbar" [class.visible]="Visible === 'Vertices'" (click)="vertice(Visible)">V</button>
+    <button id="gsv-edge" class="gsv-toolbar" [class.visible]="Visible === 'Edges'" (click)="edge(Visible)">E</button>
+    <button id="gsv-wire" class="gsv-toolbar" [class.visible]="Visible === 'Wires'" (click)="wire(Visible)">W</button>
+    <button id="gsv-face" class="gsv-toolbar" [class.visible]="Visible === 'Faces'" (click)="face(Visible)">F</button>
+    <button id="gsv-object" class="gsv-toolbar" [class.visible]="Visible === 'Objs'" (click)="object(Visible)">O</button>
+    <input id="gsv-selected" class="gsv-toolbar" type="checkbox" (click)="changeselected()">
     <label id="selectedname" value="selected">Show selected only</label>
   </div>
   <div id="pagination" >
