--- a/src/app/gs-viewer/toolwindow/toolwindow.component.html
+++ b/src/app/gs-viewer/toolwindow/toolwindow.component.html
@@ -1,5 +1,5 @@
 <div id="toolwindow">
-  <div style="position:relative;">
+  <div id="gsattri-bar" >
   <div id="toolbar">
     <button id="gsv-point" class="gsv-toolbar" [class.visible]="Visible === 'Points'" (click)="point(Visible)"><span matTooltip="View Point Attributes">P</span></button>
     <button id="gsv-vertice" class="gsv-toolbar" [class.visible]="Visible === 'Vertices'" (click)="vertice(Visible)"><span matTooltip="View Vertice Attributes">V</span></button>
@@ -21,16 +21,16 @@
 </div>
   <div id="toolview">
     <div *ngIf="Visible === 'Points'">
-      <table border="1" cellspacing="0" cellpadding="0" bordercolor="#d0d0d0">
+      <table matSort border="1" cellspacing="0" cellpadding="0" bordercolor="#d0d0d0" (matSortChange)="sortData($event)">
         <tr>
-          <td align=center width="180px"><div style="width:180px;word-wrap:break-word;" >Points ID <input type="checkbox" id="id" class="checkbox" style="float:right" [checked]="checkpointid" (click)="checkbox()"></div></td>
-          <td width="180px" align=center><div style="width:180px;word-wrap:break-word;" >X<input type="checkbox" style="float:right" id="X"  class="checkbox" [checked]="checkX" (click)="checkbox()"></div></td>
-          <td width="180px" align=center><div style="width:180px;word-wrap:break-word;" >Y<input type="checkbox" style="float:right" id="Y" class="checkbox" [checked]="checkY" (click)="checkbox()"></div></td>
-          <td width="180px" align=center><div style="width:180px;word-wrap:break-word;" >Z<input type="checkbox" style="float:right" id="Z" class="checkbox" [checked]="checkZ" (click)="checkbox()"></div></td>
-          <td  align=center width="180px" class="checkbox" *ngFor="let name of point_name;let idx=index"><div style="width:180px;word-wrap:break-word;" >{{name}}<input type="checkbox" id={{name}} style="float:right" (click)="checkbox()"></div></td>
-      </table>
-      <table border="1" cellspacing="0" cellpadding="0"  bordercolor="#d0d0d0" *ngFor="let datascale of attribute| paginate: { itemsPerPage: 50, currentPage: p1 }">
-        <tr>
+          <th mat-sort-header="id" align=center width="180px"><div style="width:180px;word-wrap:break-word;" >Points ID <input type="checkbox" id="id" class="checkbox" style="float:right" [checked]="checkpointid" (click)="checkbox()"></div></th>
+          <th mat-sort-header="x" width="180px" align=center><div style="width:180px;word-wrap:break-word;" >X<input type="checkbox" style="float:right" id="X"  class="checkbox" [checked]="checkX" (click)="checkbox()"></div></th>
+          <th mat-sort-header="y" width="180px" align=center><div style="width:180px;word-wrap:break-word;" >Y<input type="checkbox" style="float:right" id="Y" class="checkbox" [checked]="checkY" (click)="checkbox()"></div></th>
+          <th mat-sort-header="z" width="180px" align=center><div style="width:180px;word-wrap:break-word;" >Z<input type="checkbox" style="float:right" id="Z" class="checkbox" [checked]="checkZ" (click)="checkbox()"></div></th>
+          <th mat-sort-header={{name}} align=center width="180px" class="checkbox" *ngFor="let name of point_name;let idx=index"><div style="width:180px;word-wrap:break-word;" >{{name}}<input type="checkbox" id={{name}} style="float:right" (click)="checkbox()"></div></th>
+      <!-- </table>
+      <table border="1" cellspacing="0" cellpadding="0"  bordercolor="#d0d0d0" *ngFor="let datascale of attribute| paginate: { itemsPerPage: 50, currentPage: p1 }"> -->
+        <tr  *ngFor="let datascale of attribute| paginate: { itemsPerPage: 50, currentPage: p1 }">
           <td name="Number" align=center  width="180px"><div style="width:180px;word-wrap:break-word;" ><button width="180px" id="numberbutton" (click)=Onselect(datascale)>{{datascale.id}}</button></div></td>
           <td width="180px" align=center><div style="width:180px;word-wrap:break-word;" >{{datascale.x}}</div></td>
           <td width="180px" align=center><div style="width:180px;word-wrap:break-word;" >{{datascale.y}}</div></td>
@@ -40,15 +40,15 @@
       </table>
     </div>
     <div *ngIf="Visible === 'Vertices'">
-      <table border="1" cellspacing="0" cellpadding="0" bordercolor="#d0d0d0" >
+      <table matSort border="1" cellspacing="0" cellpadding="0" bordercolor="#d0d0d0" (matSortChange)="sortData($event)">
         <tr>
-          <td  align=center width="180px"><div style="width:180px;word-wrap:break-word;" >Vertices Label<input type="checkbox" id="vertixid" style="float:right" [checked]="vertixid" (click)="checkbox()"></div></td>
-          <td  align=center width="180px"><div style="width:180px;word-wrap:break-word;" >Points ID<input type="checkbox" id="pointid" style="float:right"  [checked]="pointid" (click)="checkbox()"></div></td>
-          <td  align=center width="180px" *ngFor="let name of vertex_name"><div style="width:180px;word-wrap:break-word;" >{{name}}<input type="checkbox" id={{name}} style="float:right" (click)="checkbox()"></div></td>
+          <th mat-sort-header="vertixlabel" align=center width="180px"><div style="width:180px;word-wrap:break-word;" >Vertices Label<input type="checkbox" id="vertixid" style="float:right" [checked]="vertixid" (click)="checkbox()"></div></th>
+          <th mat-sort-header="pointid" align=center width="180px"><div style="width:180px;word-wrap:break-word;" >Points ID<input type="checkbox" id="pointid" style="float:right"  [checked]="pointid" (click)="checkbox()"></div></th>
+          <th mat-sort-header={{name}} align=center width="180px" *ngFor="let name of vertex_name"><div style="width:180px;word-wrap:break-word;" >{{name}}<input type="checkbox" id={{name}} style="float:right" (click)="checkbox()"></div></th>
         </tr>
-      </table>
-      <table border="1" cellspacing="0" cellpadding="0" bordercolor="#d0d0d0" *ngFor="let datascale of attribute| paginate: { itemsPerPage: 50, currentPage: p2 }">
-        <tr>
+      <!-- </table>
+      <table border="1" cellspacing="0" cellpadding="0" bordercolor="#d0d0d0" *ngFor="let datascale of attribute| paginate: { itemsPerPage: 50, currentPage: p2 }"> -->
+        <tr *ngFor="let datascale of attribute| paginate: { itemsPerPage: 50, currentPage: p2 }">
           <td name="Number" align=center  width="180px"><div style="width:180px;word-wrap:break-word;" ><button  id="numberbutton">{{datascale.vertixlabel}}</button></div></td>
           <td  align=center  width="180px"><div style="width:180px;word-wrap:break-word;" >{{datascale.pointid}}</div></td>
           <td  id="attrib" width="180px" align=center *ngFor="let name of vertex_name; let idx=index"><div style="width:180px;word-wrap:break-word;" >{{datascale[idx]}}</div></td> 
@@ -56,56 +56,56 @@
       </table>
     </div>
     <div *ngIf="Visible === 'Edges'">
-      <table border="1" cellspacing="0" cellpadding="0"  bordercolor="#d0d0d0" >
+      <table matSort border="1" cellspacing="0" cellpadding="0"  bordercolor="#d0d0d0" (matSortChange)="sortData($event)">
         <tr>
-          <td  align=center width="180px"><div style="width:180px;word-wrap:break-word;" >Edge ID<input type="checkbox" style="float:right" id="edgeid" (click)="checkbox()"></div></td>
-          <td  align=center width="180px" *ngFor="let name of edge_name"><div style="width:180px;word-wrap:break-word;" >{{name}}<input type="checkbox" style="float:right" id={{name}} (click)="checkbox()"></div></td> 
+          <th mat-sort-header="label" align=center width="180px"><div style="width:180px;word-wrap:break-word;" >Edge ID<input type="checkbox" style="float:right" id="edgeid" (click)="checkbox()"></div></th>
+          <th mat-sort-header={{name}} align=center width="180px" *ngFor="let name of edge_name"><div style="width:180px;word-wrap:break-word;" >{{name}}<input type="checkbox" style="float:right" id={{name}} (click)="checkbox()"></div></th> 
         </tr>
-      </table>
-      <table border="1" cellspacing="0" cellpadding="0"  bordercolor="#d0d0d0" *ngFor="let datascale of attribute| paginate: { itemsPerPage: 50, currentPage: p3 }" >
-        <tr>
+      <!--</table>
+       <table border="1" cellspacing="0" cellpadding="0"  bordercolor="#d0d0d0" *ngFor="let datascale of attribute| paginate: { itemsPerPage: 50, currentPage: p3 }" > -->
+        <tr *ngFor="let datascale of attribute| paginate: { itemsPerPage: 50, currentPage: p3 }">
           <td name="Number" align=center  width="180px"><div style="width:180px;word-wrap:break-word;" ><button  id="numberbutton">{{datascale.label}}</button></div></td>
           <td  id="attrib" width="180px" align=center *ngFor="let name of edge_name; let idx=index"><div style="width:180px;word-wrap:break-word;" >{{datascale[idx]}}</div></td>
         </tr>
       </table>
     </div>
     <div *ngIf="Visible === 'Wires'">
-      <table border="1" cellspacing="0" cellpadding="0"  bordercolor="#d0d0d0" >
+      <table matSort border="1" cellspacing="0" cellpadding="0"  bordercolor="#d0d0d0" (matSortChange)="sortData($event)">
         <tr>
-          <td  align=center width="180px"><div style="width:180px;word-wrap:break-word;" >Wire ID<input type="checkbox" style="float:right" (click)="checkbox()"></div></td>
-          <td  align=center width="180px" *ngFor="let name of wire_name"><div style="width:180px;word-wrap:break-word;" >{{name}}<input type="checkbox" style="float:right" id={{name}} (click)="checkbox()"></div></td> 
+          <th mat-sort-header="label" align=center width="180px"><div style="width:180px;word-wrap:break-word;" >Wire ID<input type="checkbox" style="float:right" (click)="checkbox()"></div></th>
+          <th mat-sort-header={{name}} align=center width="180px" *ngFor="let name of wire_name"><div style="width:180px;word-wrap:break-word;" >{{name}}<input type="checkbox" style="float:right" id={{name}} (click)="checkbox()"></div></th> 
         </tr>
-      </table>
-      <table border="1" cellspacing="0" cellpadding="0"  bordercolor="#d0d0d0" *ngFor="let datascale of attribute| paginate: { itemsPerPage: 50, currentPage: p4 }" >
-        <tr>
+      <!-- </table>
+      <table border="1" cellspacing="0" cellpadding="0"  bordercolor="#d0d0d0" *ngFor="let datascale of attribute| paginate: { itemsPerPage: 50, currentPage: p4 }" > -->
+        <tr *ngFor="let datascale of attribute| paginate: { itemsPerPage: 50, currentPage: p4 }">
           <td name="Number" align=center  width="180px"><div style="width:180px;word-wrap:break-word;" ><button  id="numberbutton">{{datascale.label}}</button></div></td>
           <td  id="attrib" width="180px" align=center *ngFor="let name of wire_name; let idx=index"><div style="width:180px;word-wrap:break-word;" >{{datascale[idx]}}</div></td>
         </tr>
       </table>
     </div>
     <div *ngIf="Visible === 'Faces'">
-      <table border="1" cellspacing="0" cellpadding="0"  bordercolor="#d0d0d0" >
+      <table matSort border="1" cellspacing="0" cellpadding="0"  bordercolor="#d0d0d0" (matSortChange)="sortData($event)">
         <tr>
-          <td  align=center width="180px"><div style="width:180px;word-wrap:break-word;" >Face ID<input type="checkbox" style="float:right" id="checkface" [checked]="checkface" (click)="checkbox()"></div></td>
-          <td  align=center width="180px" *ngFor="let name of face_name"><div style="width:180px;word-wrap:break-word;" >{{name}}<input type="checkbox" style="float:right" id={{name}} (click)="checkbox()"></div></td> 
+          <th mat-sort-header="label" align=center width="180px"><div style="width:180px;word-wrap:break-word;" >Face ID<input type="checkbox" style="float:right" id="checkface" [checked]="checkface" (click)="checkbox()"></div></th>
+          <th mat-sort-header={{name}} align=center width="180px" *ngFor="let name of face_name"><div style="width:180px;word-wrap:break-word;" >{{name}}<input type="checkbox" style="float:right" id={{name}} (click)="checkbox()"></div></th> 
         </tr>
-      </table>
-      <table border="1" cellspacing="0" cellpadding="0"  bordercolor="#d0d0d0" *ngFor="let datascale of attribute| paginate: { itemsPerPage: 50, currentPage: p5 }" >
-        <tr>
+      <!-- </table>
+      <table border="1" cellspacing="0" cellpadding="0"  bordercolor="#d0d0d0" *ngFor="let datascale of attribute| paginate: { itemsPerPage: 50, currentPage: p5 }" > -->
+        <tr *ngFor="let datascale of attribute| paginate: { itemsPerPage: 50, currentPage: p5 }">
           <td name="Number" align=center  width="180px"><div style="width:180px;word-wrap:break-word;" ><button  id="numberbutton">{{datascale.label}}</button></div></td>
           <td  id="attrib" width="180px" align=center *ngFor="let name of face_name; let idx=index"><div style="width:180px;word-wrap:break-word;" >{{datascale[idx]}}</div></td>
         </tr>
       </table>
     </div>
     <div *ngIf="Visible === 'Objs'">
-      <table border="1" cellspacing="0" cellpadding="0"  bordercolor="#d0d0d0" class="table_ojbs" >
+      <table matSort border="1" cellspacing="0" cellpadding="0"  bordercolor="#d0d0d0" class="table_ojbs" (matSortChange)="sortData($event)">
         <tr>
-          <td name="Number" align=center width="180px"><div style="width:180px;word-wrap:break-word;" >Object ID<input type="checkbox" style="float:right" id="checkobj" [checked]="checkobj" (click)="checkbox()"></div></td>
-          <td  align=center width="180px" *ngFor="let name of obj_name" ><div style="width:180px;word-wrap:break-word;" >{{name}}<input type="checkbox" style="float:right" (click)="checkbox()"></div></td>
+          <th mat-sort-header="label" name="Number" align=center width="180px"><div style="width:180px;word-wrap:break-word;" >Object ID<input type="checkbox" style="float:right" id="checkobj" [checked]="checkobj" (click)="checkbox()"></div></th>
+          <th mat-sort-header={{name}} align=center width="180px" *ngFor="let name of obj_name" ><div style="width:180px;word-wrap:break-word;" >{{name}}<input type="checkbox" style="float:right" (click)="checkbox()"></div></th>
         </tr>
-      </table>
-      <table border="1" cellspacing="0" cellpadding="0"  bordercolor="#d0d0d0" *ngFor="let datascale of attribute| paginate: { itemsPerPage: 50, currentPage: p6 } " class="table_ojbs" >
-        <tr>
+      <!-- </table>
+      <table border="1" cellspacing="0" cellpadding="0"  bordercolor="#d0d0d0" *ngFor="let datascale of attribute| paginate: { itemsPerPage: 50, currentPage: p6 } " class="table_ojbs" > -->
+        <tr *ngFor="let datascale of attribute| paginate: { itemsPerPage: 50, currentPage: p6 } ">
           <td name="Number" align=center  width="180px"><div style="width:180px;word-wrap:break-word;" ><button  id="numberbutton">{{datascale.label}}</button></div></td>
           <td  id="attrib" width="180px" align=center *ngFor="let name of obj_name; let idx=index"><div style="width:180px;word-wrap:break-word;" >{{datascale[idx]}}</div></td>
         </tr>
