--- a/src/app/gs-viewer/toolwindow/toolwindow.component.css
+++ b/src/app/gs-viewer/toolwindow/toolwindow.component.css
@@ -4,14 +4,15 @@
   font-family:sans-serif;
   width: 100%;
 }
-#gsattri-bar{
-  width: 100%;
+/*#gsattri-bar{
+  /*width: 100%;*/
+  /*background-color: #f1f1f1 !important;
   position:relative;
-}
+}*/
 #toolbar{
   background-color: #f1f1f1 !important;
   float: left;
-  width: 50%;
+  width: 30%;
   height: 30px;
   left: 0px;
   margin-top:0px;
@@ -22,10 +23,10 @@
   align-items: center;
 }
 #pagination{
-  float: right;
-  width: 50%;
+  float: left !important;
+  width: 20%;
   height: 30px;
-  right: 0px;
+  left: 30%;
   position: fixed !important;
   top:unset !important;
   margin-top: 0px;
