--- a/src/app/gs-viewer/toolwindow/toolwindow.component.css
+++ b/src/app/gs-viewer/toolwindow/toolwindow.component.css
@@ -1,36 +1,30 @@
 #toolwindow{
   background-color:white;
-  /*overflow-x: scroll !important;*/
   font-family:sans-serif;
   width: 100%;
-}
-/*#gsattri-bar{
-  /*width: 100%;*/
-  /*background-color: #f1f1f1 !important;
   position:relative;
-}*/
+}
+#gsattri-bar{
+  background-color: #f1f1f1 !important;
+  position:relative;
+  display: inline-flex;
+  width: 100%;
+}
 #toolbar{
   background-color: #f1f1f1 !important;
-  float: left;
-  width: 30%;
+  width: 48%;
   height: 30px;
-  left: 0px;
-  margin-top:0px;
-  
+  margin:0px;
   overflow: hidden !important;
   font-family:sans-serif;
   position: relative !important;
-  /*display: flex;*/
-  align-items: center;
 }
 #pagination{
-  float: left;
-  width: 20%;
+  width: 48%;
   height: 30px;
-  left: 30%;
-  position: relative !important;
+  position: relative ;
   top:unset !important;
-  margin-top: 0px;
+  margin: 0px;
   background-color: #f1f1f1 !important;
 }
 
@@ -45,7 +39,7 @@
 }
 #toolview{
   position:relative;
-  margin-top: 30px;
+  margin-top: 0px;
   width: 100%;
   float: left;
 }
@@ -118,17 +112,7 @@
   float:right;
   margin-right: 30px;
 }
-#pagination{
-  position:relative;
-  width: 50%;
-  background-color: #E6E6E6;
-  float: right;
-  right: 0px;
-  height: 30px;
-  color:black !important;
-  top:0px;
-  overflow: hidden !important;
-}
+
 .my-pagination /deep/ .ngx-pagination{
   margin:0px !important;
   color:black !important;
